--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.33.0",
+    "eslint-plugin-react": "^7.32.2",
     "jsdom": "^21.1.0",
     "prettier": "2.8.3",
     "typescript": "^4.9.3",
